# IDW_serial

./: CMakeLists.txt  Metodos.cpp  Metodos.h  Raster.cpp  Raster.h  common.h  main.cpp
